Fix overflow of text in output box

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -76,4 +76,9 @@ header {
   .input {
     color: black;
   }
+
+  .output {
+    overflow-wrap: break-word;
+    overflow: auto;
+  }
 }
